# sushii-site2

./: .dockerignore  .gitignore  Cargo.toml  Commands.toml  Commands.yml  Dockerfile  README.md  Rocket.toml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
src/: assets.rs  catchers.rs  main.rs  routes.rs  tests.rs
src/model/: commands.rs  config.rs  context.rs  mod.rs  template.rs
src/styles/: app.scss  colors.scss  fonts.scss  markdown.scss
templates/: about.hbs  commands.hbs  hello.hbs  help.hbs  index.hbs  layout.hbs  nav.hbs
templates/components/: discord_message.hbs  discord_messages.hbs  footer.hbs  nav.hbs
