[package]
name = "sushii-site2"
version = "0.1.1"
edition = "2018"

[dependencies]
serde_json = "1.0"
sass-rs = "0.2.2"
lazy_static = "1.4.0"

[dependencies.pulldown-cmark]
version = "0.8"
default-features = false

[dependencies.figment]
version = "0.9.4"
features = ["json", "yaml"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
# rocket = "^0.4"
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
# version = "^0.4"
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["handlebars_templates", "serve"]

[dependencies.rocket_prometheus]
git = "https://github.com/sd2k/rocket_prometheus"
branch = "async"
